# lekiwi-dora-node

./: README.md  pyproject.toml
dataflows/: lekiwi-mujoco-bridge.yml
docs/superpowers/plans/: 2026-06-30-lekiwi-dora-node.md
docs/superpowers/specs/: 2026-06-30-lekiwi-dora-node-design.md
examples/: live_viewer.py
lekiwi_node/: __main__.py  _envelope.py  arm_driver.py  base_controller.py  control.py  geometry.py  kinematics.py  mujoco_sim.py  node.py  runtime.py  sim_scene.py
tests/: test_arm_driver.py  test_base_controller.py  test_control.py  test_envelope.py  test_geometry.py  test_kinematics.py  test_node.py  test_runtime.py  test_sim_scene.py
