[project]
name = "lekiwi-dora-node"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyarrow",
    "drive-kinematics @ git+https://github.com/dorarobotics/drive-kinematics.git@v0.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
